# PacEngine

./: .gitignore  .replit  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md  replit.nix  tsconfig.json
artifacts/api-server/: package.json
attached_assets/: Pasted--PACENGINE-v7-CAPABILITY-MAP-The-complete-picture-of-wh_1777528882779.txt  Pasted--version-1-0-0-format-pacai-pacdata-v7-pacCoreVersion-3_1777517227233.txt  Pasted-C-High-level-C-Class-Skeletons-C-render-core-PacRendere_1777513777899.txt  Pasted-Final-Architecture-Clean-Separation-PacWorldImporter-Re_1777519831157.txt  Pasted-Full-Technical-Description-Internal-GitHub-PacEngine-De_1777231181489.txt  Pasted-Here-are-the-corresponding-changes-to-PacRenderer-Impor_1777515565569.txt  Pasted-Here-s-a-clean-cohesive-PacEngine-v5-Snapshot-document-_1777513690231.txt  Pasted-Here-s-a-clean-practical-CMake-setup-tailored-for-your-_1777515155592.txt  Pasted-Here-s-a-practical-solo-dev-friendly-proposal-tailored-_1777513164736.txt  Pasted-Here-s-the-next-piece-a-clean-practical-implementation-_1777514817571.txt  Pasted-I-recommend-we-create-a-new-file-lib-export-pacengine-e_1777515480729.txt  Pasted-This-is-not-a-feature-list-This-is-a-sequenced-dependen_1777231375063.txt  Pasted-We-re-kicking-off-M2-5-Tier-2-Foundation-3D-Rendering-M_1777513729203.txt  Pasted-You-re-aiming-for-an-ecosystem-not-just-an-engine-that-_1777230555792.txt  Pasted-You-re-basically-asking-for-the-whole-bridge-now-nice-I_1777519629659.txt  Pasted-pacdata-schemas-visual-manifest-json-Schema-JSON-schema_1777514142771.txt
pacengine/: .gitignore  CMakeLists.txt  README.md
pacengine/.editor-runs/: agent_world-mogj4gau-4831e6a2.json  agent_world-mogj5wqo-baf5e306.json  agent_world-mogj5x1z-40763c79.json  agent_world-mogj5x29-0d2427b2.json  agent_world-mogj5x29-0d2427b2.trace  agent_world-mogj7gst-00e16640.json  agent_world-mogj7gst-00e16640.trace  agent_world-moiutq56-47ee9e94.json  agent_world-moiuv3k9-fa8290bb.json  agent_world-moiuv3kk-846f68c6.json  agent_world-moiuv3kk-846f68c6.trace  agent_world-moiuvfir-fc5ee15d.json  agent_world-moiuvx2y-c7c638bd.json  agent_world-moiuvx2y-c7c638bd.trace  multi_agent_sandbox-moiuwy3o-9a60a6bd.json  multi_agent_sandbox-moiuwy3o-9a60a6bd.trace  multi_agent_sandbox-moiuykzd-7924c779.json  multi_agent_sandbox-moiuyrvg-2af805ff.json  multi_agent_sandbox-moiv1a9q-5b7efc49.json  multi_agent_sandbox-moiv1a9q-5b7efc49.trace  multi_agent_sandbox-moiv1aa9-c7d3f339.json  tiny_world-moiw7d02-cb4e7d6d.json  tiny_world-moiw7d02-cb4e7d6d.trace  tiny_world-moiw8lz7-9511fe6c.json  tiny_world-moiw8lzo-73b266cb.json
pacengine/build_render/: CMakeCache.txt  Makefile  cmake_install.cmake
pacengine/build_render/engine/: Makefile  cmake_install.cmake
pacengine/build_render/pacdata/: Makefile  cmake_install.cmake
pacengine/build_render/render/: Makefile  cmake_install.cmake
pacengine/build_review/: CMakeCache.txt  Makefile  cmake_install.cmake
pacengine/build_review/engine/: Makefile  cmake_install.cmake
pacengine/build_review/game/: Makefile  cmake_install.cmake
pacengine/build_review/pacdata/: Makefile  cmake_install.cmake
pacengine/build_review/render/: Makefile  cmake_install.cmake  render_smoke
pacengine/docs/: architecture.md  execution-plan.md  overview.md  roadmap.md
pacengine/engine/: CMakeLists.txt
pacengine/engine/conflict_sim/include/: ConflictSim.hpp
pacengine/engine/conflict_sim/src/: ConflictSim.cpp
pacengine/engine/ecs/include/: ComponentStorage.hpp  Components.hpp  EntityId.hpp
pacengine/engine/runtime/db/include/: IDatabase.hpp  LocalDatabase.hpp
pacengine/engine/runtime/db/src/: LocalDatabase.cpp
pacengine/engine/runtime/include/: EventLog.hpp  PacRuntime.hpp  World.hpp
pacengine/engine/runtime/src/: EventLog.cpp  PacRuntime.cpp  World.cpp
pacengine/engine/runtime/worker/include/: LocalWorker.hpp  WorkerAPI.hpp  WorkerJob.hpp
pacengine/engine/runtime/worker/src/: LocalWorker.cpp
pacengine/engine/scheduler/include/: ISystem.hpp  Scheduler.hpp
pacengine/engine/scheduler/src/: Scheduler.cpp
pacengine/engine/systems/movement/include/: MovementSystem.hpp
pacengine/engine/systems/movement/src/: MovementSystem.cpp
pacengine/engine/trace/include/: Trace.hpp  TraceDiff.hpp  TraceFormat.hpp  TraceReader.hpp
pacengine/engine/trace/src/: Trace.cpp  TraceDiff.cpp  TraceReader.cpp
pacengine/examples/: agent_world.pacdata.json  conflict_arena.pacdata.json  empty_world.pacdata.json  multi_agent_sandbox.pacdata.json  test_world.pacdata.json  tiny_world.pacdata.json  tiny_world2.pacdata.json  tiny_world2.visual_manifest.json  visual_test.pacdata.json  visual_test.visual_manifest.json
pacengine/game/: CMakeLists.txt  main.cpp
pacengine/napi/: CMakeLists.txt  binding.gyp  index.d.ts  index.js  package.json
pacengine/napi/src/: PacRendererAddon.cpp
pacengine/pacdata/: CMakeLists.txt
pacengine/pacdata/include/: PacData.hpp  PacDataLoader.hpp
pacengine/pacdata/src/: PacData.cpp  PacDataLoader.cpp
pacengine/render/: CMakeLists.txt
pacengine/render/assets/: GltfLoader.cpp  GltfLoader.h  TextureManager.cpp  TextureManager.h
pacengine/render/backend/: VulkanContext.cpp  VulkanContext.h
pacengine/render/bindings/: PacRendererBridge.h
pacengine/render/core/: Material.cpp  Material.h  Mesh.h  PacDataLoader.cpp  PacDataLoader.h  PacDataWorld.h  PacRenderer.cpp  PacRenderer.h  RenderProxy.cpp  RenderProxy.h  RenderScene.cpp  RenderScene.h  VisualManifest.h  VisualManifestLoader.cpp  VisualManifestLoader.h  render_types.h
pacengine/render/effects/: FogSystem.h  PostProcess.h  SkySystem.h
pacengine/render/importer/: PacWorldImporter.cpp  PacWorldImporter.h
pacengine/render/shaders/: unlit.frag  unlit.vert
pacengine/render/shaders/prebuilt/: unlit.frag.spv  unlit.vert.spv
pacengine/render/tests/: render_smoke.cpp
pacengine/simulation/: PacSimulation.cpp  PacSimulation.h
pacengine/tests/: CMakeLists.txt  test_agent_demo.cpp  test_determinism.cpp  test_ecs.cpp  test_simulation_determinism.cpp  test_worker_isolation.cpp
pacengine/tools/editor/: README.md
(+52 files in other folders)
